--- a/start.html
+++ b/start.html
@@ -28,6 +28,8 @@
 
 		<script src="js/app/app.js"></script>
 		<script src="js/app/bars.js"></script>
+		<script src="js/app/clustersCheck.js"></script>
+		<script src="js/app/clustersComp.js"></script>
 		<script src="js/app/clustersMod.js"></script>
 		<script src="js/app/error.js"></script>
 		<script src="js/app/git.js"></script>
