--- a/win.html
+++ b/win.html
@@ -202,6 +202,27 @@
       <div id="clusters-compare" class="off"></div>
 
       <div id="clusters-check" class="off"></div>
+
+      <div id="clusters-preview" class="off">
+        <a href="#"><img src="img/win/close.svg" width="30" height="30" alt=""></a>
+
+        <p
+          ><input type="radio" name="clusters-preview-choose" id="clusters-preview-choose-old"
+          ><label for="clusters-preview-choose-old">vorherige Berechnung <span></span>anzeigen</label
+        ></p>
+
+        <p
+          ><input type="radio" name="clusters-preview-choose" id="clusters-preview-choose-new"
+          ><label for="clusters-preview-choose-new">neue Berechnung starten</label
+        ></p>
+
+        <p id="clusters-preview-modulate"
+          ><input type="checkbox" id="clusters-preview-modulate-check"
+          ><label for="clusters-preview-modulate-check">Modulierung mit einbeziehen</label
+        ></p>
+
+        <p><input type="button" value="Vorschau" id="clusters-preview-choose"></p>
+      </div>
     </section>
 
     <!-- VIEW: SUCHE -->
