--- a/html/help.html
+++ b/html/help.html
@@ -541,12 +541,14 @@
 
     <!-- CLUSTERS -->
     <section id="clusterei">
-      <mark>TODO Clusterei</mark>
+      <p id="clusterei-vorschauOptionModulierung"><mark>TODO Option: Modulierung mit einbeziehen</mark></p>
+
+      <p id="clusterei-vorschauOptionClusterVerweise"><mark>TODO Option: Cluster-Verweise ignorieren</mark></p>
     </section>
 
     <!-- SEARCH -->
     <section id="suche">
-      <mark>TODO Suche</mark>
+      <p id="suche-syntax"><mark>TODO Suchsyntax</mark></p>
     </section>
 
     <!-- PREFERENCES -->
