day 28 (feature complete)
* some fixes and minor changes
* removals from xml.data.files:
    - key "first" (easier approach in artikel.js)
    - key "name" (unused)
* completed export of Artikel.json
* node script to convert Artikel.json into human readable file
* CLI option to export Artikel.json without program window

--- a/win.html
+++ b/win.html
@@ -436,7 +436,7 @@
                 ><img src="img/win/help.svg" width="24" height="24" alt=""
               ></a></h2>
               <p
-                ><input type="button" value="Zurücksetzen" id="prefs-cache-leeren"
+                ><input type="button" value="Löschen" id="prefs-cache-leeren"
               ></p>
             </div>
 
